--- a/amplify.yml
+++ b/amplify.yml
@@ -3,18 +3,17 @@ backend:
   phases:
     build:
       commands:
-        - npm ci --cache .npm --prefer-offline
-        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+        - npm install --cache .npm --prefer-offline
 frontend:
   phases:
     build:
       commands:
         - npm run build
-  artifacts:
-    baseDirectory: dist
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - .npm/**/*
-      - node_modules/**/*
+artifacts:
+  baseDirectory: dist
+  files:
+    - '**/*'
+cache:
+  paths:
+    - .npm/**/*
+    - node_modules/**/*
