--- a/amplify.yml
+++ b/amplify.yml
@@ -3,17 +3,18 @@ backend:
   phases:
     build:
       commands:
-        - npm install --cache .npm --prefer-offline
+        - npm ci --cache .npm --prefer-offline
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
     build:
       commands:
         - npm run build
-artifacts:
-  baseDirectory: dist
-  files:
-    - '**/*'
-cache:
-  paths:
-    - .npm/**/*
-    - node_modules/**/*
+  artifacts:  # This section specifies the build output
+    baseDirectory: dist
+    files:
+      - '**/*'  # Include all files in the dist directory
+  cache:
+    paths:
+      - .npm/**/*
+      - node_modules/**/*
